--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^11.1.2",
+    "@sentry/nextjs": "^6.12.0",
     "next": "11.1.2",
+    "next-compose-plugins": "^2.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
