--- a/package.json
+++ b/package.json
@@ -4,17 +4,27 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "yarn migrationsinext build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "run:knex": "NODE_ENV=development TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' knex",
+    "migrate:latest": "yarn run:knex  migrate:latest",
+    "migrate:create": "yarn run:knex  migrate:make -x ts",
+    "migrate:rollback": "yarn run:knex migrate:rollback"
   },
   "dependencies": {
     "@next/bundle-analyzer": "^11.1.2",
     "@sentry/nextjs": "^6.12.0",
+    "@supabase/supabase-js": "^1.22.5",
+    "dotenv": "^10.0.0",
+    "knex": "^0.95.11",
     "next": "11.1.2",
     "next-compose-plugins": "^2.2.1",
+    "pg": "^8.7.1",
+    "querystring": "^0.2.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "ts-node": "^10.2.1"
   },
   "devDependencies": {
     "@types/react": "17.0.20",
