--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "dom.iterable",
       "esnext"
     ],
-    "types": ["node", "jest"],
+    "types": ["node"],
     "baseUrl": ".",
     "allowJs": true,
     "skipLibCheck": true,
