--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "knex": "^0.95.11",
     "next": "11.1.2",
     "next-compose-plugins": "^2.2.1",
+    "node-telegram-bot-api": "^0.54.0",
     "pg": "^8.7.1",
     "querystring": "^0.2.1",
     "react": "17.0.2",
@@ -27,6 +28,7 @@
     "ts-node": "^10.2.1"
   },
   "devDependencies": {
+    "@types/node-telegram-bot-api": "^0.51.4",
     "@types/react": "17.0.20",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
