--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "@next/bundle-analyzer": "^11.1.2",
     "@sentry/nextjs": "^6.12.0",
     "@supabase/supabase-js": "^1.22.5",
+    "autoprefixer": "^10.3.4",
     "dotenv": "^10.0.0",
     "knex": "^0.95.11",
     "next": "11.1.2",
     "next-compose-plugins": "^2.2.1",
     "node-telegram-bot-api": "^0.54.0",
     "pg": "^8.7.1",
+    "postcss": "^8.3.6",
     "querystring": "^0.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "tailwindcss": "^2.2.15",
     "ts-node": "^10.2.1"
   },
   "devDependencies": {
