--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@next/bundle-analyzer": "^11.1.2",
     "@sentry/nextjs": "^6.12.0",
     "@supabase/supabase-js": "^1.22.5",
+    "@tailwindcss/forms": "^0.3.3",
     "autoprefixer": "^10.3.4",
+    "axios": "^0.21.4",
     "dotenv": "^10.0.0",
     "knex": "^0.95.11",
     "next": "11.1.2",
